--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>MP's portfolio</title>
 </head>
 <body>
+    <nav>
+        <a href="#page-1"></a>
+        <a href="#page-2"></a>
+        <a href="#page-3"></a>
+        <a href="#page-4"></a>
+    </nav>
+
+    <section id="page-1">Page 1 - YELLOW</section>
+    <section id="page-2">Page 2 - PURPLE</section>
+    <section id="page-3">Page 3 - BLUE</section>
+    <section id="page-4">Page 3 - RED</section>
     
 </body>
 </html>
