--- a/index.html
+++ b/index.html
@@ -5,23 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MP's portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
 
-    
-
-    <nav>
-        <a href="#page-1"></a>
-        <a href="#page-2"></a>
-        <a href="#page-3"></a>
-        <a href="#page-4"></a>
-    </nav>
-
     <section id="page-1">
-        <iframe width="878" height="494" src="https://www.youtube.com/embed/NpEaa2P7qZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
+        <div class="grid">
+            <nav>
+                <a title="About me" href="#page-1"><i class="bi bi-person-fill icon-nav zoom"></i></a>
+                <a title="Projects" href="#page-2"><i class="bi bi-file-code-fill icon-nav"></i></a>
+                <a href="#page-3"></a>
+                <a href="#page-4"></a>
+            </nav>
+            <header>
+                <img src="./images/mp-logo-trans-med.png" id="logo">
+            </header>
+            <main>
+                <iframe height="500px" src="https://www.youtube.com/embed/NpEaa2P7qZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </main>
+            <div class="text">
+                <h1>Bio</h1>
+                <p>I can describe myself in a thousand different ways and repeat the classic "I'm very good at working under pressure" or "I have great leadership skills", but what really characterizes me is my unwavering tenacity. Failing to achieve my life goals scares me to death, but I find that all the more reason to fight passionately for each and every one of them.</p>
+            </div>
+            <footer>
+                <div id="circle"></div>
+            </footer>
+        </div>
     </section>
 
     <section id="page-2">
