--- a/index.html
+++ b/index.html
@@ -14,35 +14,34 @@
             <nav>
                 <a title="About me" href="#page-1"><i class="bi bi-person-fill icon-nav zoom"></i></a>
                 <a title="Projects" href="#page-2"><i class="bi bi-file-code-fill icon-nav"></i></a>
-                <a href="#page-3"></a>
-                <a href="#page-4"></a>
             </nav>
             <header>
                 <img src="./images/mp-logo-trans-med.png" id="logo">
+                <h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</h4>
             </header>
             <main>
-                <iframe height="500px" src="https://www.youtube.com/embed/NpEaa2P7qZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="vid-container">
+                    <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </main>
             <div class="text">
-                <h1>Bio</h1>
-                <p>I can describe myself in a thousand different ways and repeat the classic "I'm very good at working under pressure" or "I have great leadership skills", but what really characterizes me is my unwavering tenacity. Failing to achieve my life goals scares me to death, but I find that all the more reason to fight passionately for each and every one of them.</p>
+                <h1 class="titles">Bio</h1>
+                <div  class="p-container"><p>My name is Maria Paz Gutierrez and I'm from Guayaquil, Ecuador. Even though I'm now based in Spain, I'm working remotely on my own accounting firm as a finance manager. After a couple of years in this field, I decided to take the plunge and incur into the world of software development. At the moment, I'm enrolled in the MIT xPro coding program learning web development using the MERN stack.</p></div>
+                <div id="circle"></div>
             </div>
             <footer>
-                <div id="circle"></div>
+                <h4 class="titles">More about me</h4>
+                <div class="ref-links">
+                    <a href="https://www.linkedin.com/in/maria-paz-gutierrez/">Linked<i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/mp-gutierrez">GitHub<i class="bi bi-github"></i></a>
+                </div>
+                
             </footer>
         </div>
     </section>
 
     <section id="page-2">
         Page 2 - PURPLE
-    </section>
-
-    <section id="page-3">
-        Page 3 - RED
-    </section>
-
-    <section id="page-4">
-        Page 4 - BLUE
     </section>
     
 </body>
