landing page layout completely functional

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,600&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 
@@ -22,7 +22,7 @@
                 <a title="Projects" href="#page-2"><i class="bi bi-file-code-fill icon-nav"></i></a>
             </nav>
             <header>
-                <img src="./images/mp-logo-trans-med.png" id="logo">
+                <img src="./images/mp-logo-trans-med.png" id="logo" style="height: 50%;">
                 <div class="phrase-container">
                     <h4>Almost before we knew it, we had left the ground.</h4>
                 </div>
@@ -39,14 +39,16 @@
             </div>
             <footer>
                 <div class="footer-title">
-                    <h3 class="titles">More about me</h3>
+                    <h3>Best way to contact me</h3>
                 </div>
-                <div class="ref-links">
-                    <a href="https://www.linkedin.com/in/maria-paz-gutierrez/">Linked<i class="bi bi-linkedin"></i></a>
-                        GitHub <i class="bi bi-github"></i> <br>
+                    <div class="link">
+                        Linked<i class="bi bi-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/maria-paz-gutierrez/"><p class="footer-content">MPG</p></a>
+                    </div>
+                    <div class="link">
+                        GitHub <i class="bi bi-github"></i>
                         <a href="https://github.com/mp-gutierrez"><p class="footer-content">mp-gutierrez</p></a>
-                    </a>
-                </div>
+                    </div>
                 
             </footer>
         </div>
