landing page layout complete

--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
                 <div class="footer-title">
                     <h3>Best way to contact me</h3>
                 </div>
-                    <div class="link">
-                        Linked<i class="bi bi-linkedin"></i>
-                        <a href="https://www.linkedin.com/in/maria-paz-gutierrez/"><p class="footer-content">MPG</p></a>
-                    </div>
-                    <div class="link">
-                        GitHub <i class="bi bi-github"></i>
-                        <a href="https://github.com/mp-gutierrez"><p class="footer-content">mp-gutierrez</p></a>
-                    </div>
-                
+                <div class="link" style="float: left;">
+                    Linked<i class="bi bi-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/maria-paz-gutierrez/"><p class="footer-content">MPG</p></a>
+                </div>
+                <div class="link" style="float: right;">
+                    GitHub <i class="bi bi-github"></i>
+                    <a href="https://github.com/mp-gutierrez"><p class="footer-content">mp-gutierrez</p></a>
+                </div>
             </footer>
         </div>
     </section>
